--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<version>2.0.0-RELEASE</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<groupId>com.demo</groupId>
 </project>
